View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026498 | Community | OCCT:Modeling Algorithms | public | 2015-07-30 10:35 | 2016-04-17 14:55 |
Reporter | mat127 | Assigned To | |||
Priority | low | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | x86_64 | OS | Linux Fedora Core | ||
Product Version | 6.9.0 | ||||
Target Version | 6.9.1 | Fixed in Version | 6.9.1 | ||
Summary | 0026498: BRepOffsetAPI_MakeOffset causes segmentation fault | ||||
Description | BRepOffsetAPI_MakeOffset crashes on simple open polygon - see steps to reproduce. The BRepOffsetAPI_MakeOffset::Perform() call leads to the segmentation fault. | ||||
Steps To Reproduce | BRepBuilderAPI_MakePolygon polygon; polygon.Add(gp_Pnt(0.0,0.0,0.0)); polygon.Add(gp_Pnt(0.2, 0.0, 0.0)); polygon.Add(gp_Pnt(0.2, 0.2, 0.0)); polygon.Add(gp_Pnt(0.4, 0.2, 0.0)); polygon.Add(gp_Pnt(0.4, 0.4, 0.0)); polygon.Add(gp_Pnt(-0.06, 0.57, 0.0)); TopoDS_Wire wire = polygon.Wire(); BRepTools::Write(wire, "original.brep"); BRepOffsetAPI_MakeOffset builder(wire, GeomAbs_Intersection, true); builder.Perform(-0.2, 0.0); // segmentation fault TopoDS_Shape offset = builder.Shape(); BRepTools::Write(offset, "offset.brep"); #Draw script: polyline w 0 0 0 0.2 0 0 0.2 0.2 0 0.4 0.2 0 0.4 0.4 0 -0.06 0.57 0 openoffset r w 1 -0.2 i checkshape r_1 #Checkshape output: On Shape faulty_1 : BRepCheck_InvalidRange Faulty shapes in variables faulty_1 to faulty_1 | ||||
Tags | No tags attached. | ||||
Test case number | bugs modalg_6 bug26498 | ||||
|
original.brep (935 bytes) |
|
I could not reproduce exception in the current master version. The draw script to reproduce: polyline w 0 0 0 0.2 0 0 0.2 0.2 0 0.4 0.2 0 0.4 0.4 0 -0.06 0.57 0 openoffset r w 1 -0.2 i checkshape r_1 However, checkshape gives an error BRepCheck_InvalidRange. It is not good and must be fixed. |
|
Branch CR26498 has been created by isn. SHA-1: 7a79a053ab64056ef9cc45f19b5376d9b726b63d Detailed log of new commits: Author: isn Date: Mon Aug 10 17:56:58 2015 +0300 0026498: BRepOffsetAPI_MakeOffset :: incorrect result of offset |
|
dear jgv, please review branch CR26498 |
|
Reviewed. |
|
Branch CR26498 has been updated forcibly by mkv. SHA-1: 6933e170be8c462cd99c2cad8f17f442c7d621c6 |
|
Dear BugMaster, Branch CR26498 was rebased on current master of occt git-repository. SHA-1: 6933e170be8c462cd99c2cad8f17f442c7d621c6 |
|
Dear BugMaster, Branch CR26498 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 6933e170be8c462cd99c2cad8f17f442c7d621c6 Number of compiler warnings: occt component : Linux: 15 (15 on master) Windows: 0 (0 on master) products component : Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences/Improvements: No regressions/differences Testing cases: http://occt-tests/CR26498-master-occt-64/Debian70-64/bugs/modalg_6/bug26498.html http://occt-tests/CR26498-master-occt-64/Windows-64-VC10/bugs/modalg_6/bug26498.html bugs modalg_6 bug26498: OK Testing on Linux: occt component : Total MEMORY difference: 91403960 / 91597648 [-0.21%] Total CPU difference: 17811.229999999057 / 17713.58999999894 [+0.55%] products component : Total MEMORY difference: 25108035 / 25123208 [-0.06%] Total CPU difference: 7047.529999999999 / 7008.090000000001 [+0.56%] Testing on Windows: occt component : Total MEMORY difference: 57063618 / 57056005 [+0.01%] Total CPU difference: 16406.11036669904 / 16696.693429399114 [-1.74%] products component : Total MEMORY difference: 16120026 / 16119994 [+0.00%] Total CPU difference: 5146.9253928999615 / 5290.8519154999685 [-2.72%] There are no differences in images found by testdiff. |
|
Branch CR26498 has been updated by mkv. SHA-1: 167bef4308c257b9a8ceb38c4012ca264f2be4d9 Detailed log of new commits: Author: mkv Date: Tue Aug 25 15:40:07 2015 +0300 Test case for issue CR26498 |
|
Dear isn, could you please review following test case bugs modalg_6 bug26498 |
|
reviewed |
|
Dear BugMaster, Branch CR26498 is TESTED. |
|
Function CheckSmallParamOnEdge() must have been made static! |
|
Branch CR26498 has been deleted by kgv. SHA-1: 167bef4308c257b9a8ceb38c4012ca264f2be4d9 |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-07-30 10:35 | mat127 | New Issue | |
2015-07-30 10:35 | mat127 | Assigned To | => msv |
2015-07-30 10:35 | mat127 | File Added: original.brep | |
2015-07-30 12:33 |
|
Note Added: 0043696 | |
2015-07-30 12:33 |
|
Assigned To | msv => isn |
2015-07-30 12:33 |
|
Status | new => assigned |
2015-07-30 12:33 |
|
Target Version | => 7.1.0 |
2015-07-30 12:33 |
|
Steps to Reproduce Updated | |
2015-07-30 12:35 |
|
Priority | normal => low |
2015-07-30 12:35 |
|
Severity | crash => minor |
2015-08-10 17:57 | git | Note Added: 0043950 | |
2015-08-10 17:57 |
|
Assigned To | isn => jgv |
2015-08-10 17:58 |
|
Status | assigned => feedback |
2015-08-24 18:05 |
|
Status | feedback => resolved |
2015-08-24 18:05 |
|
Note Added: 0044568 | |
2015-08-24 18:10 |
|
Note Added: 0044569 | |
2015-08-24 18:10 |
|
Assigned To | jgv => bugmaster |
2015-08-24 18:10 |
|
Status | resolved => reviewed |
2015-08-24 18:13 |
|
Assigned To | bugmaster => mkv |
2015-08-24 18:33 | git | Note Added: 0044572 | |
2015-08-25 15:14 |
|
Note Added: 0044603 | |
2015-08-25 15:14 |
|
Note Added: 0044604 | |
2015-08-25 15:40 | git | Note Added: 0044609 | |
2015-08-25 15:41 |
|
Note Added: 0044610 | |
2015-08-25 15:41 |
|
Assigned To | mkv => isn |
2015-08-25 15:41 |
|
Status | reviewed => feedback |
2015-08-25 15:41 |
|
Test case number | => bugs modalg_6 bug26498 |
2015-08-26 16:02 |
|
Note Added: 0044671 | |
2015-08-26 16:02 |
|
Assigned To | isn => mkv |
2015-08-26 16:02 |
|
Status | feedback => assigned |
2015-08-26 16:09 |
|
Note Added: 0044672 | |
2015-08-26 16:09 |
|
Assigned To | mkv => bugmaster |
2015-08-26 16:09 |
|
Status | assigned => feedback |
2015-08-26 16:09 |
|
Status | feedback => tested |
2015-08-28 11:44 |
|
Changeset attached | => occt master 7642e2d0 |
2015-08-28 11:44 |
|
Assigned To | bugmaster => ski |
2015-08-28 11:44 |
|
Status | tested => verified |
2015-08-28 11:44 |
|
Resolution | open => fixed |
2015-09-11 17:50 |
|
Target Version | 7.1.0 => 6.9.1 |
2015-09-11 17:50 |
|
Note Added: 0045526 | |
2015-10-16 14:55 |
|
Status | verified => closed |
2015-10-23 20:51 |
|
Fixed in Version | => 6.9.1 |
2016-04-17 14:55 | git | Note Added: 0053246 |