0026498: BRepOffsetAPI_MakeOffset causes segmentation fault

Test case for issue CR26498